# uofthacks-2026

./: .gitignore  README.md
agent/: mcp_agent.py
backend/: README.md  check_limits.py  client_path.py  database.md  database.py  debug_groq_response.py  debug_token.py  debug_tools.py  generate_checkout.py  init_db.py  mcp_agent.py  mcp_multi_client.py  models.py  profile_router.py  pyproject.toml  requirements.txt  server.py  servers_config.json  test_discovery_and_checkout.py  test_groq_direct.py  test_import.py  tryon.md  util.py
backend/dto/: profile.py  purchase.py  search.py
backend/enums/: sort.py
context/: context.txt
frontend3/: next.config.ts  package-lock.json  package.json  requirements.txt
frontend3/src/app/: globals.css  layout.tsx  page.tsx
frontend3/src/app/login/: page.tsx
frontend3/src/components/: Cart.tsx  ChatInput.tsx  Checkout.tsx  ProductCard.tsx  ProductGrid.tsx  SideBarChat.tsx
frontend3/src/lib/: mockData.ts
