[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-gemini>=0.1.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "mcp>=1.25.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0",
    "pymongo>=4.6.0",
    "langchain-google-genai>=4.2.0",
]
